--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         this.typing = true;
 
                         if (this.firstInteraction) {
-                            const welcomeMessage = "Halo Selamat Datang di website ChatGPT versi buatan Raya...";
+                            const welcomeMessage = "Halo Selamat Datang di website ChatGPT versi buatan Raya, Orang yang menciptakan Website Ai ini adalah Raya Fadilla Azhar, Jika terjadi bug atau ada saran & pertanyaan silahkan WhatsApp Nomor Ini 0838-3232-5363, Website ini ter-inspirasi oleh ChatGPT https://chatgpt.com/ itu aja, terima kasih, selamat menggunakan website ai ini ya.";
                             this.messages.push({ role: "assistant", content: welcomeMessage });
                             this.firstInteraction = false;
                             this.typing = false;
