--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
                         if (this.firstInteraction) {
 
-                            const welcomeMessage = "Halo Selamat Datang di website ChatGPT versi buatan Raya, Website Ai ini diciptakan oleh Raya Fadilla Azhar, Jika terjadi bug atau ada saran & pertanyaan silahkan Pencet Tombol "LAPORKAN BUG/SARAN/PERTANYAAN DISINI" Atau WhatsApp Saya jika anda punya nomor saya, Website ini ter-inspirasi oleh ChatGPT https://chatgpt.com/ itu aja, terima kasih, selamat menggunakan website ai ini ya.";
+                            const welcomeMessage = "Halo Selamat Datang di website ChatGPT versi buatan Raya, Website Ai ini diciptakan oleh Raya Fadilla Azhar, Jika terjadi bug atau ada saran & pertanyaan silahkan Pencet Tombol 'LAPORKAN BUG/SARAN/PERTANYAAN DISINI' Atau WhatsApp Saya jika anda punya nomor saya, Website ini ter-inspirasi oleh ChatGPT https://chatgpt.com/ itu aja, terima kasih, selamat menggunakan website ai ini ya.";
 
                             this.messages.push({ role: "assistant", content: welcomeMessage });
 
